# stocks

./: .gitignore  ARCHITECTURE_TODO.md  README.md  portfolio copy.db  pyproject.toml  requirements.txt  start_backend.sh  start_frontend.sh
.github/workflows/: ci.yml
backend/app/: __init__.py  config.py  database.py  import_cli.py  main.py  models.py  schemas.py
backend/app/routers/: cgt.py  groups.py  imports.py  instruments.py  matching.py  orders.py  portfolio.py
backend/app/services/: barclays_order_parser.py  barclays_parser.py  cgt_service.py  hl_parser.py  import_service.py  instrument_matcher.py  market_data_service.py  order_fingerprint.py  order_service.py  portfolio_service.py
backend/tests/: conftest.py  test_barclays_parser.py  test_cgt_service.py  test_hl_parser.py  test_import_service.py  test_instrument_matcher.py  test_matching_engine.py  test_order_fingerprint.py  test_order_service.py  test_portfolio_service.py
backend/tests/fixtures/: barclays-orders.xls  barclays-portfolio.xls  hl-activity.csv  hl-holdings.csv
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: AuroraBackground.tsx  Card.tsx  ChartPanel.tsx  Collapsible.tsx  GroupPerformancePanel.tsx  GroupsSection.tsx  HeroKpi.tsx  HoldingsTable.tsx  ImportHistory.tsx  ImportPanel.tsx  InstrumentDetail.tsx  MatchingWarningBanner.tsx  OrderHistorySection.tsx  OrderRow.tsx  PerformersSection.tsx  PositionAnalysis.tsx  SegmentedControl.tsx  (+4 more)
(+22 files in other folders)
